<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layoutAnimation="@anim/recycler_animation_fast"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="2">

            <FrameLayout
                android:id="@+id/beginnerCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:elevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/beginnerClueImg"
                        layout="@layout/circular_image_medium"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/beginner"
                        android:textAlignment="center"
                        android:textSize="@dimen/circular_card_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/beginnerClueValue">
                        hello</TextView>

                    <TextView
                        android:id="@+id/beginnerClueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/watermelon_red"
                        android:textSize="@dimen/sub_header"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/beginnerClueImg" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/easyCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/easyClueImg"
                        layout="@layout/circular_image_medium"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/easy"
                        android:textAlignment="center"
                        android:textSize="@dimen/circular_card_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/easyClueValue">
                        hello</TextView>

                    <TextView
                        android:id="@+id/easyClueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/watermelon_red"
                        android:textSize="@dimen/sub_header"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/easyClueImg" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/mediumCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/mediumClueImg"
                        layout="@layout/circular_image_medium"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:textAlignment="center"
                        android:textSize="@dimen/circular_card_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mediumClueValue">
                        hello</TextView>

                    <TextView
                        android:id="@+id/mediumClueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/watermelon_red"
                        android:textSize="@dimen/sub_header"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mediumClueImg" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>


            <FrameLayout
                android:id="@+id/hardCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/hardClueImg"
                        layout="@layout/circular_image_medium"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hard"
                        android:textAlignment="center"
                        android:textSize="@dimen/circular_card_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hardClueValue"></TextView>

                    <TextView
                        android:id="@+id/hardClueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/watermelon_red"
                        android:textSize="@dimen/sub_header"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hardClueImg" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/eliteCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/eliteClueImg"
                        layout="@layout/circular_image_medium"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/elite"
                        android:textAlignment="center"
                        android:textSize="@dimen/circular_card_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eliteClueValue">
                        hello</TextView>

                    <TextView
                        android:id="@+id/eliteClueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/watermelon_red"
                        android:textSize="@dimen/sub_header"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eliteClueImg" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/masterCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include
                        android:id="@+id/masterClueImg"
                        layout="@layout/circular_image_medium"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/master"
                        android:textAlignment="center"
                        android:textSize="@dimen/circular_card_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/masterClueValue">
                        hello</TextView>

                    <TextView
                        android:id="@+id/masterClueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/watermelon_red"
                        android:textSize="@dimen/sub_header"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/masterClueImg" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </GridLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>