<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search_user.SingleSkillFragment"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageContainer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/white"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/singleSkillIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:transitionName="photoToAnimate"
                app:srcCompat="@drawable/woodcutting_icon"
                tools:srcCompat="@drawable/woodcutting_icon" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/skillText"
        android:transitionName="skillText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/watermelon_red"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageContainer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:elevation="5dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skillText">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Level"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skillLevelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="levelValue..."
                android:textAlignment="center"
                android:textColor="@color/watermelon_red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="XP"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/skillXPText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xpValue..."
                    android:textAlignment="center"
                    android:textColor="@color/watermelon_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rank"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/skillRankText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="rankValue.."
                    android:textAlignment="center"
                    android:textColor="@color/watermelon_red" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toNextLevelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_next"
                android:textSize="@dimen/circular_card_text_size" />

            <ProgressBar
                android:id="@+id/toNextLevelBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/disbaled"
                />

            <TextView
                android:id="@+id/nextLevelPercentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textSize="@dimen/circular_card_sub_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/multipleOfTenSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toNextMultipleOfTenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_next_ten"
                android:textSize="@dimen/circular_card_text_size" />

            <ProgressBar
                android:id="@+id/toNextMultipleOfTenBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/disbaled"/>

            <TextView
                android:id="@+id/nextTenLevelPercentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textSize="@dimen/circular_card_sub_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toNinetyNineSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_next_ninety_nine"
                android:textSize="@dimen/circular_card_text_size" />

            <ProgressBar
                android:id="@+id/toNinetyNineBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/disbaled"/>

            <TextView
                android:id="@+id/ninetyNinePercentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textSize="@dimen/circular_card_sub_text_size" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>